crates/guest-macros/tests/compile_fail/duplicate_route.stderr
error: duplicate route: `get /greet` is already registered
  --> tests/compile_fail/duplicate_route.rs:10:9
   |
10 |         "/greet": get(Req, Reply),
   |         ^^^^^^^^
